added img for NB, updated NB

--- a/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1410,7 +1410,138 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's not working as expected. I think I'd want the first SNP in each RAD tag anyway, so maybe it'd be possible for me to do that using vcftools "
+    "That's not working as expected. I think I'd want the first SNP in each RAD tag anyway, so maybe it'd be possible for me to do that using vcftools filtering, after making a list of SNPs to keep. From the [manual](http://vcftools.sourceforge.net/man_latest.html):\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/vcftools_snpfilter.png?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/cragig_lanes_12_002_outfiles\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/cragig_lanes_12_002_outfiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "snp_map = open(\"cragig_lanes_12_002.snps.map\",\"r\")\n",
+    "snp_map_lines = snp_map.readlines()\n",
+    "snp_map.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "locus_nums = []\n",
+    "snp_nums = []\n",
+    "first_snp_dict = {}\n",
+    "snp_count_dict = {}\n",
+    "\n",
+    "for line in snp_map_lines:\n",
+    "    linelist = line.strip().split()\n",
+    "    locus_num = linelist[0]\n",
+    "    snp_num = linelist[3]\n",
+    "    if locus_num not in locus_nums:\n",
+    "        locus_nums.append(locus_num)\n",
+    "        snp_count_dict[locus_num] = 1\n",
+    "    else:\n",
+    "        snp_count_dict[locus_num] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "snp_count_dict['4']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot how many SNPs per tag straight out of ipyrad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_count = max(snp_count_dict.values())+1\n",
+    "print max_count #check "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAD8CAYAAAB5Pm/hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD1dJREFUeJzt3X+MZWddx/H3xy4VKUi37GRd2sYp0mCqCdJMmiJICEuw\nFMJWQ5oikRWabIigIBpYJQHiX60/QDCmZqWVxTS4WMA2tAh1gRD/6Oq0lP5ggS61hd1sdwcpLcgf\nUPn6xz3b3A7z85575+4+fb+SyZwfz7nnm3POfOaZ5557JlWFJKldPzPtAiRJk2XQS1LjDHpJapxB\nL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhq3adoFAGzZsqVmZ2enXYYknVJuv/3271TVzGrtToqg\nn52dZX5+ftplSNIpJcmDa2nn0I0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9\nJDXupPhkrLSa2d03j7ztA1e9aoyVSKcee/SS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXO\noJekxhn0ktS4VYM+yXVJjie5Z2jZWUluTXJf931ztzxJPpTkUJK7klw4yeIlSatbS4/+I8Ali5bt\nBvZX1fnA/m4e4JXA+d3XLuCa8ZQpSRrVqkFfVV8Cvrto8Q5gbze9F7hsaPlHa+A24Mwk28ZVrCRp\n/UYdo99aVUe76YeArd302cC3h9od7pb9lCS7kswnmV9YWBixDEnSanq/GVtVBdQI2+2pqrmqmpuZ\nmelbhiRpGaM+pvhYkm1VdbQbmjneLT8CnDvU7pxumSQ1qc8jtGFjHqM9ao/+JmBnN70TuHFo+Ru6\nu28uBh4ZGuKRJE3Bqj36JB8DXgpsSXIYeC9wFfDxJFcCDwKXd81vAS4FDgE/BN44gZqlJwX/2YrG\nZdWgr6rXLbNq+xJtC3hL36IkSePjJ2MlqXEGvSQ1zqCXpMYZ9JLUuFHvo5ekJXm30MnHHr0kNc6g\nl6TGGfSS1DiDXpIaZ9BLUuO860ZawanwZEL11/c8n+zs0UtS4wx6SWqcQS9JjTPoJalxBr0kNc6g\nl6TGeXulpJOGD0SbDHv0ktQ4e/RSg+wZa5g9eklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16S\nGmfQS1LjDHpJalyvoE/yR0nuTXJPko8leWqS85IcSHIoyb4kp4+rWEnS+o0c9EnOBv4QmKuqXwVO\nA64ArgY+UFXPBR4GrhxHoZKk0fR91s0m4OeS/Bh4GnAUeBnwO936vcD7gGt67kc6JbX+T6dPJh7r\n5Y3co6+qI8BfAd9iEPCPALcD36uqx7pmh4Gz+xYpSRpdn6GbzcAO4Dzg2cAZwCXr2H5Xkvkk8wsL\nC6OWIUlaRZ83Y18O/HdVLVTVj4FPAi8CzkxyYkjoHODIUhtX1Z6qmququZmZmR5lSJJW0ifovwVc\nnORpSQJsB74KfAF4bddmJ3BjvxIlSX30GaM/ANwA3AHc3b3WHuBdwDuSHAKeBVw7hjolSSPqdddN\nVb0XeO+ixfcDF/V5XUnS+PjJWElqnP8zVhtmWvc5e3+1nuzs0UtS4wx6SWqcQS9JjXOMXtIT+J5G\ne+zRS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhrnB6a0Ln6YRjr12KOXpMbZo3+S\nsUcuPfnYo5ekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn\n0EtS4wx6SWpcr6BPcmaSG5J8LcnBJC9MclaSW5Pc133fPK5iJUnr17dH/0Hg36rql4HnAweB3cD+\nqjof2N/NS5KmZOSgT/JM4CXAtQBV9aOq+h6wA9jbNdsLXNa3SEnS6Pr06M8DFoB/TPLlJB9Ocgaw\ntaqOdm0eArb2LVKSNLo+Qb8JuBC4pqpeAPwvi4ZpqqqAWmrjJLuSzCeZX1hY6FGGJGklfYL+MHC4\nqg508zcwCP5jSbYBdN+PL7VxVe2pqrmqmpuZmelRhiRpJSMHfVU9BHw7yfO6RduBrwI3ATu7ZTuB\nG3tVKEnqpe8/B/8D4PokpwP3A29k8Mvj40muBB4ELu+5D0lSD72CvqruBOaWWLW9z+tKksbHT8ZK\nUuMMeklqnEEvSY0z6CWpcX3vutGIZnffPPK2D1z1qjFWIql19uglqXEGvSQ1zqCXpMY5Rn8K6jO+\nL+nJxx69JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINe\nkhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuN6B32S05J8Ocmnu/nz\nkhxIcijJviSn9y9TkjSqcfTo3wYcHJq/GvhAVT0XeBi4cgz7kCSNqFfQJzkHeBXw4W4+wMuAG7om\ne4HL+uxDktRP3x793wDvBH7SzT8L+F5VPdbNHwbOXmrDJLuSzCeZX1hY6FmGJGk5Iwd9klcDx6vq\n9lG2r6o9VTVXVXMzMzOjliFJWsWmHtu+CHhNkkuBpwI/D3wQODPJpq5Xfw5wpH+ZkqRRjdyjr6o/\nrapzqmoWuAL4fFW9HvgC8Nqu2U7gxt5VSpJGNon76N8FvCPJIQZj9tdOYB+SpDXqM3TzuKr6IvDF\nbvp+4KJxvK4kqT8/GStJjTPoJalxYxm6ebKa3X3ztEuQpFXZo5ekxhn0ktQ4g16SGmfQS1LjDHpJ\napxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TG\nGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktS4TaNumORc4KPAVqCAPVX1\nwSRnAfuAWeAB4PKqerh/qZMxu/vmaZcgSRPVp0f/GPDHVXUBcDHwliQXALuB/VV1PrC/m5ckTcnI\nQV9VR6vqjm76+8BB4GxgB7C3a7YXuKxvkZKk0Y1ljD7JLPAC4ACwtaqOdqseYjC0I0makt5Bn+Tp\nwCeAt1fVo8PrqqoYjN8vtd2uJPNJ5hcWFvqWIUlaRq+gT/IUBiF/fVV9slt8LMm2bv024PhS21bV\nnqqaq6q5mZmZPmVIklYwctAnCXAtcLCq3j+06iZgZze9E7hx9PIkSX2NfHsl8CLgd4G7k9zZLfsz\n4Crg40muBB4ELu9XoiSpj5GDvqr+A8gyq7eP+rqSpPHyk7GS1DiDXpIaZ9BLUuMMeklqnEEvSY0z\n6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINe\nkhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWp\ncRMJ+iSXJPl6kkNJdk9iH5KktRl70Cc5Dfg74JXABcDrklww7v1IktZmEj36i4BDVXV/Vf0I+Gdg\nxwT2I0lag0kE/dnAt4fmD3fLJElTsGlaO06yC9jVzf4gydcntKstwHcm9Np9WNf6WNf6WNf6TK2u\nXL3i6tXq+sW17GMSQX8EOHdo/pxu2RNU1R5gzwT2/wRJ5qtqbtL7WS/rWh/rWh/rWp/W65rE0M1/\nAecnOS/J6cAVwE0T2I8kaQ3G3qOvqseSvBX4LHAacF1V3Tvu/UiS1mYiY/RVdQtwyyReewQTHx4a\nkXWtj3Wtj3WtT9N1parG8TqSpJOUj0CQpMY1E/SrPXYhyc8m2detP5BkdgNqOjfJF5J8Ncm9Sd62\nRJuXJnkkyZ3d13smXVe33weS3N3tc36J9Unyoe543ZXkwg2o6XlDx+HOJI8mefuiNhtyvJJcl+R4\nknuGlp2V5NYk93XfNy+z7c6uzX1Jdm5AXX+Z5GvdefpUkjOX2XbFcz6But6X5MjQubp0mW0n9siU\nZeraN1TTA0nuXGbbSR6vJbNhYtdYVZ3yXwze9P0m8BzgdOArwAWL2vw+8Pfd9BXAvg2oaxtwYTf9\nDOAbS9T1UuDTUzhmDwBbVlh/KfAZIMDFwIEpnNOHgF+cxvECXgJcCNwztOwvgN3d9G7g6iW2Owu4\nv/u+uZvePOG6XgFs6qavXqqutZzzCdT1PuBP1nCeV/zZHXddi9b/NfCeKRyvJbNhUtdYKz36tTx2\nYQewt5u+AdieJJMsqqqOVtUd3fT3gYOcOp8S3gF8tAZuA85Msm0D978d+GZVPbiB+3xcVX0J+O6i\nxcPX0F7gsiU2/U3g1qr6blU9DNwKXDLJuqrqc1X1WDd7G4PPrmyoZY7XWkz0kSkr1dX9/F8OfGxc\n+1urFbJhItdYK0G/lscuPN6m+6F4BHjWhlQHdENFLwAOLLH6hUm+kuQzSX5lg0oq4HNJbs/gU8qL\nTftRFlew/A/gNI4XwNaqOtpNPwRsXaLNtI/bmxj8JbaU1c75JLy1G1K6bplhiGker98AjlXVfcus\n35DjtSgbJnKNtRL0J7UkTwc+Aby9qh5dtPoOBsMTzwf+FvjXDSrrxVV1IYOnjL4lyUs2aL+ryuCD\ndq8B/mWJ1dM6Xk9Qg7+hT6pb1pK8G3gMuH6ZJht9zq8Bfgn4NeAog2GSk8nrWLk3P/HjtVI2jPMa\nayXo1/LYhcfbJNkEPBP4n0kXluQpDE7k9VX1ycXrq+rRqvpBN30L8JQkWyZdV1Ud6b4fBz7F4E/o\nYWt6lMWEvBK4o6qOLV4xrePVOXZi+Kr7fnyJNlM5bkl+D3g18PouIH7KGs75WFXVsar6v6r6CfAP\ny+xvWsdrE/DbwL7l2kz6eC2TDRO5xloJ+rU8duEm4MS7068FPr/cD8S4dGOA1wIHq+r9y7T5hRPv\nFSS5iME5megvoCRnJHnGiWkGb+bds6jZTcAbMnAx8MjQn5STtmxPaxrHa8jwNbQTuHGJNp8FXpFk\nczdU8Ypu2cQkuQR4J/CaqvrhMm3Wcs7HXdfwezq/tcz+pvXIlJcDX6uqw0utnPTxWiEbJnONTeId\n5Wl8MbhL5BsM3sF/d7fszxlc/ABPZTAUcAj4T+A5G1DTixn86XUXcGf3dSnwZuDNXZu3AvcyuNvg\nNuDXN6Cu53T7+0q37xPHa7iuMPgHMt8E7gbmNug8nsEguJ85tGzDjxeDXzRHgR8zGAO9ksF7OvuB\n+4B/B87q2s4BHx7a9k3ddXYIeOMG1HWIwZjtiWvsxN1lzwZuWemcT7iuf+qunbsYBNi2xXV18z/1\nszvJurrlHzlxTQ213cjjtVw2TOQa85OxktS4VoZuJEnLMOglqXEGvSQ1zqCXpMYZ9JLUOINekhpn\n0EtS4wx6SWrc/wOX2b0ZiYGSMQAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fd13e091850>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.hist(snp_count_dict.values(), bins=np.arange(0,max_count,1)-.5)\n",
+    "plt.suptitle(\"Number of SNPs per RAD tag, after filtering for max 20 SNPs\")\n",
+    "plt.show()"
    ]
   },
   {
