--- a/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
@@ -1694,7 +1694,9 @@
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2624,7 +2626,9 @@
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -3172,7 +3176,9 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -3226,7 +3232,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "If I want to correlate read depth to statistics like Fis and heterozygosity, I need to be able to identify SNPs called one thing in the VCF file and called another thing in the structure file.\n",
     "\n",
@@ -3237,7 +3246,9 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3256,7 +3267,9 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -3279,7 +3292,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3302,7 +3317,9 @@
    "cell_type": "code",
    "execution_count": 114,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3324,7 +3341,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -3336,7 +3355,9 @@
    "cell_type": "code",
    "execution_count": 110,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -3349,7 +3370,9 @@
    "cell_type": "code",
    "execution_count": 111,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3386,7 +3409,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -3395,7 +3420,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -3408,9 +3435,11 @@
     "editable": true
    },
    "source": [
-    "## Exploratory Plots\n",
+    "## Filtering & Exploratory Plots Notebooks\n",
     "\n",
-    "**20170620**"
+    "I made work notebooks for the filtering steps and also for producing exploratory plots, just so I don't have to redo that work with every lane, etc. Filtering notebook here, exploratory plots notebook here.\n",
+    "\n",
+    "It looks like my fis distribution departs from 0 when I filter for MAF, and so I'm a bit stuck on what to do. Here are the exploratory plots:\n"
    ]
   },
   {
