--- a/CRAGIG_combined_lanes/Notebooks/Filtering.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Filtering.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Filtering\n",
     "\n",
@@ -11,7 +14,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**[1]** Change working directory to assembly outfiles"
    ]
@@ -20,7 +26,9 @@
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -37,7 +45,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**[2]** Make directory for new/edited outfiles from ipyrad, called ``new_outfiles``."
    ]
@@ -46,7 +57,9 @@
    "cell_type": "code",
    "execution_count": 134,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -63,7 +76,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**[3]** Use ``vcftools`` to filter for biallelic loci and minor allele frequency. Manual [here](http://vcftools.sourceforge.net/man_latest.html).\n",
     "\n",
@@ -76,7 +92,9 @@
    "cell_type": "code",
    "execution_count": 140,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -111,7 +129,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**[4]** Make dictionary for translating STR file locus names to VCF file locus names\n",
     "\n",
@@ -124,7 +145,9 @@
    "cell_type": "code",
    "execution_count": 141,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -137,7 +160,9 @@
    "cell_type": "code",
    "execution_count": 142,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -157,7 +182,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**[5]** Extract read depth information by locus from VCF file. \n",
     "\n",
@@ -168,7 +196,9 @@
    "cell_type": "code",
    "execution_count": 143,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -199,7 +229,9 @@
    "cell_type": "code",
    "execution_count": 144,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -230,7 +262,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**[6]** Make STR file out of filtered VCF using PGD Spider. \n",
     "\n",
@@ -245,7 +280,9 @@
    "cell_type": "code",
    "execution_count": 149,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -254,7 +291,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/vcf_parser.png?raw=true)\n",
     "\n",
@@ -264,7 +304,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**[7]** Rename header of STR file using dictionary created in Step 4.\n",
     "\n",
@@ -275,7 +318,9 @@
    "cell_type": "code",
    "execution_count": 147,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -286,7 +331,9 @@
    "cell_type": "code",
    "execution_count": 150,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -299,7 +346,9 @@
    "cell_type": "code",
    "execution_count": 151,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -320,7 +369,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**[8]** Get one SNP per RAD tag\n",
     "\n",
@@ -333,7 +385,9 @@
    "cell_type": "code",
    "execution_count": 152,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -344,7 +398,9 @@
    "cell_type": "code",
    "execution_count": 153,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -392,7 +448,9 @@
    "cell_type": "code",
    "execution_count": 154,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -409,7 +467,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**[9]** Add population information (OPTIONAL)\n",
     "\n",
@@ -422,7 +483,9 @@
    "cell_type": "code",
    "execution_count": 155,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -434,7 +497,9 @@
    "cell_type": "code",
    "execution_count": 156,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -447,7 +512,9 @@
    "cell_type": "code",
    "execution_count": 157,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -460,7 +527,9 @@
    "cell_type": "code",
    "execution_count": 158,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -496,7 +565,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**[10]** Add fake second population to be able to look at populations as one in ``hierfstat``\n",
     "\n",
@@ -509,7 +581,9 @@
    "cell_type": "code",
    "execution_count": 159,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -520,7 +594,9 @@
    "cell_type": "code",
    "execution_count": 160,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -556,15 +632,6 @@
     "\n",
     "print \"Number of individuals after adding fpop = \" + str(len(sample_list) + 2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
