--- a/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
@@ -3239,193 +3239,8 @@
    "source": [
     "If I want to correlate read depth to statistics like Fis and heterozygosity, I need to be able to identify SNPs called one thing in the VCF file and called another thing in the structure file.\n",
     "\n",
-    "Looks like the structure file named loci arbitrarily with snp 1,2,3,etc. Maybe there was a way to name it with a list of snp names? Regardless, I could make a key using the VCF file (right before I make it a structure file with PGD Spider)"
+    "Looks like the structure file named loci arbitrarily with snp 1,2,3,etc. Maybe there was a way to name it with a list of snp names? Regardless, I could make a key using the VCF file (right before I make it a structure file with PGD Spider)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/cragig_lanes_12_002_outfiles/cragig_lanes_12_002_edited_outfiles_and_suppl_stats\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd /mnt/hgfs/SHARED_FOLDER/Learn_iPyrad/CRAGIG_RUNS_12_py/cragig_lanes_12_002_outfiles/cragig_lanes_12_002_edited_outfiles_and_suppl_stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "vcf_code = open(\"cragig_lanes_12_002_biall_maf.vcf.recode.vcf\",\"r\")\n",
-    "snp_name_key = {}\n",
-    "snp_count = 1\n",
-    "\n",
-    "for line in vcf_code:\n",
-    "    if line[0] != \"#\":\n",
-    "        linelist = line.strip().split()\n",
-    "        vcf_name = linelist[0] + \"_\" + linelist[1]\n",
-    "        str_name = \"SNP_\" + str(snp_count)\n",
-    "        snp_name_key[str_name] = vcf_name\n",
-    "        snp_count += 1\n",
-    "\n",
-    "vcf_code.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'locus_145_3'"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# check that it worked\n",
-    "snp_name_key['SNP_2']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'locus_92597_18'"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "snp_name_key['SNP_3253']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# next steps:\n",
-    "# get list of str snp names in final str file, get RD for these using key above, get stats through hierfstat, plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "strfile = open(\"cragig_lanes12_002_biall_maf_wpops_onesnp.txt\",\"r\")\n",
-    "strfile_lines = strfile.readlines()\n",
-    "strfile.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'SNP_3259'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-111-93ccbd3c0a57>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mstr_header_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr_header\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstr_header_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# ignore \"sample\" and \"pop\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mnew_str_header\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0msnp_name_key\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mnew_str_header\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_str_header\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'SNP_3259'"
-     ]
-    }
-   ],
-   "source": [
-    "# replace str file locusnames with informative vcf file locus names\n",
-    "\n",
-    "new_str_header = \"\\t\\t\"\n",
-    "\n",
-    "str_header = strfile_lines[0]\n",
-    "str_header_list = str_header.strip().split()\n",
-    "for x in str_header_list[2:]: # ignore \"sample\" and \"pop\"\n",
-    "    new_str_header += snp_name_key[x] + \" \"\n",
-    "new_str_header = new_str_header[:-1] + \"\\n\"\n",
-    "\n",
-    "vcfnames_strfile = open(\"cragig_lanes12_002_biall_maf_onesnp_vcfnames.str\",\"w\")\n",
-    "vcfnames_strfile.write(new_str_header)\n",
-    "for line in strfile_lines[1:]:\n",
-    "    vcfnames_strfile.write(line)\n",
-    "vcfnames_strfile.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3437,7 +3252,7 @@
    "source": [
     "## Filtering & Exploratory Plots Notebooks\n",
     "\n",
-    "I made work notebooks for the filtering steps and also for producing exploratory plots, just so I don't have to redo that work with every lane, etc. Filtering notebook here, exploratory plots notebook here.\n",
+    "I made work notebooks for the filtering steps and also for producing exploratory plots, just so I don't have to redo that work with every lane, etc. Filtering notebook [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/Filtering.ipynb), exploratory plots notebook [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/Exploratory%20Plots.ipynb).\n",
     "\n",
     "It looks like my fis distribution departs from 0 when I filter for MAF, and so I'm a bit stuck on what to do. Here are the exploratory plots:\n"
    ]
