added imgs for NB, updated NBs

--- a/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
@@ -3231,7 +3231,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**20170705**\n",
     "\n",
@@ -3242,7 +3245,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3261,7 +3266,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3308,7 +3315,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3327,7 +3336,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3358,7 +3369,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "It looks like nothing got filtered out when I set the minimum samples per locus parameter to 1, which means it's working as expected."
    ]
@@ -3402,14 +3416,27 @@
    "source": [
     "## Is heterozygosity really that low?\n",
     "\n",
-    "We expect much higher heterozygosity, and also I'm surprised by how many loci have very low minor allele frequencies. Just to double-check... going to use the vcf file to manually calculate minor allele frequencies and how many should be getting filtered out."
+    "We expect much higher heterozygosity, and also I'm surprised by how many loci have very low minor allele frequencies. Just to double-check... going to use the vcf file to manually calculate minor allele frequencies and how many should be getting filtered out. \n",
+    "\n",
+    "\n",
+    "## Read depth & missing data\n",
+    "\n",
+    "In a separate notebook, I looked at read depth, missing data, and MAF manually (parsing the VCF file, making branches that didn't filter for missing data, etc.). It looked like the issue may be in part a read depth issue, so I explored line counts in the raw fastqs, and counts of lines with the restriction site, etc., and made some useful plots. The bottom line is lane 2 looks a lot crappier than lane 1 and I'm not sure yet what that means about assembly, but it's my leading hypothesis for why nothing is making it through and maybe why there's such low heterozygosity. Here are some summary plots:\n",
+    "\n",
+    "![img]()\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/lines_per_fastq_lanes12_20170707.png?raw=true)\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/sbf1_lines_lanes12_20170706.png?raw=true)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
