updated NBs, added K Silliman's script for subsetting SNPs

--- a/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/CRAGIG_runs_1_and_2_through_ipyrad.ipynb
@@ -3421,9 +3421,11 @@
     "\n",
     "## Read depth & missing data\n",
     "\n",
-    "In a separate notebook, I looked at read depth, missing data, and MAF manually (parsing the VCF file, making branches that didn't filter for missing data, etc.). It looked like the issue may be in part a read depth issue, so I explored line counts in the raw fastqs, and counts of lines with the restriction site, etc., and made some useful plots. The bottom line is lane 2 looks a lot crappier than lane 1 and I'm not sure yet what that means about assembly, but it's my leading hypothesis for why nothing is making it through and maybe why there's such low heterozygosity. Here are some summary plots:\n",
+    "In a separate notebook, I looked at read depth, missing data, and MAF manually (parsing the VCF file, making branches that didn't filter for missing data, etc.). It looked like the issue may be in part a read depth issue, so I explored line counts in the raw fastqs, and counts of lines with the restriction site, etc., and made some useful plots. \n",
     "\n",
-    "![img]()\n",
+    "The bottom line is lane 2 looks a lot crappier than lane 1 and I'm not sure yet what that means about assembly, but it's my leading hypothesis for why nothing is making it through and maybe why there's such low heterozygosity. lane one had more lines in the fastq files, and more of lines with the restriction site, and higher read depth. Here are some summary plots:\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/rd_plots_comp_lanes_20170707.png?raw=true)\n",
     "\n",
     "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/lines_per_fastq_lanes12_20170707.png?raw=true)\n",
     "\n",
