--- a/CRAGIG_combined_lanes/Notebooks/Filtering.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Filtering.ipynb
@@ -376,9 +376,7 @@
    "source": [
     "**[8]** Get one SNP per RAD tag\n",
     "\n",
-    "A collaborator made a script to get one SNP per RAD tag based on coverage and position in the tag, but I haven't gotten a hold of it yet. In the mean time, I'll choose the first SNP per RAD tag.\n",
-    "\n",
-    "Be sure to change the name of the new filtered STR file, with one SNP per RAD tag."
+    "A collaborator made a script to get one SNP per RAD tag based on coverage and position in the tag, which picks the SNP with the highest coverage. If there's a tie between SNPs, it picks the one closest to the beginning of the read.\n"
    ]
   },
   {
