updated NB + added gif for ho

--- a/CRAGIG_combined_lanes/Notebooks/Evaluating_clustering_similarity_ipyrad.ipynb
+++ b/CRAGIG_combined_lanes/Notebooks/Evaluating_clustering_similarity_ipyrad.ipynb
@@ -762,7 +762,9 @@
    "source": [
     "## Observed heterozygosity vs. clustering similarity\n",
     "\n",
-    "![]"
+    "Before filtering for MAF:\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_combined_lanes/Notebooks/imgs_for_notebooks/Hs_gif_20170711.gif?raw=true)"
    ]
   },
   {
